docs/emissary/1.13/topics/running/index.md
# Running $productName$ in production

This section of the documentation is designed for operators and site reliability engineers who are managing the deployment of $productName$. Learn more below:

* *Global Configuration:* The [Ambassador module](ambassador) is used to set system-wide configuration.
* *Exposing $productName$ to the Internet:* [Host CRD](host-crd) defines how $productName$ is exposed to the outside world, managing TLS, domains, and such.
* *Load Balancing:* $productName$ supports a number of different [load balancing strategies](load-balancer) as well as different ways to configure [service discovery](resolvers)
* [Gzip Compression](gzip)
* *Deploying $productName$:* On [Amazon Web Services](ambassador-with-aws) | [Google Cloud](ambassador-with-gke) | [general security and operational notes](running), including running multiple $productNamePlural$ on a cluster
* *TLS/SSL:* [Simultaneously Routing HTTP and HTTPS](tls/cleartext-redirection#cleartext-routing) | [HTTP -> HTTPS Redirection](tls/cleartext-redirection#http---https-redirection) | [Mutual TLS](tls/mtls) | [TLS origination](tls/origination)
* *Statistics and Monitoring:* [Integrating with Prometheus, DataDog, and other monitoring systems](statistics)
* *Extending $productName$* $productName$ can be extended with custom plug-ins that connect via HTTP/gRPC interfaces. [Custom Authentication](services/auth-service) | [The External Auth protocol](services/ext_authz) | [Custom Logging](services/log-service) | [Rate Limiting](services/rate-limit-service) | [Distributed Tracing](services/tracing-service)
* *Troubleshooting:* [Diagnostics](diagnostics) | [Debugging](debugging)
* *Scaling $productName$:* [Scaling $productName$](scaling)
* *Ingress:* $productName$ can function as an [Ingress Controller](ingress-controller)
* *Error Response Overrides:* $productName$ can override 4xx and 5xx responses with [custom response bodies](custom-error-responses)
